--- a/index.html
+++ b/index.html
@@ -1,168 +1,165 @@
+<!--
+  This template is a sample template for a personal portfolio. There are todo's below to help
+  you figure out what needs to be changed. This is meant to be an introduction to website design,
+  so if you wan't to learn more, we encourage you to do some research about HTML, CSS, and if you're
+  feeling up to it, JavaScript! https://www.w3schools.com/ is a great website to learn more about web design
+  and development, and there are many more great resources out there if you google them or check out some YouTube 
+  videos. Have fun!
+-->
+
 <!DOCTYPE html>
 <html>
-<title>Lillian's Personal Website</title>
+<!--TODO: Change title to your name-->
+<title>Lillian the Llama</title>
 <meta charset="UTF-8">
-
-<!--
-Check out this link to see the various class names you can use with w3
-https://www.w3schools.com/w3css/4/w3.css
--->
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
+<link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto'>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel = "stylesheet"
    type = "text/css"
    href = "index.css" />
+<body class="w3-light-grey">
 
-<body class="w3-white">
+<!-- Page Container -->
+<div class="w3-content w3-margin-top" style="max-width:1400px;">
 
-<!-- Icon Bar (Sidebar - hidden on small screens) -->
-<nav class="w3-sidebar w3-bar-block w3-small w3-hide-small w3-center">
-  <!-- Link to font awesome icons https://fontawesome.com/v4.7.0/icons/ just change the name after fa- and it will change the icon! -->
-  <a href="#" class="w3-bar-item w3-button w3-padding-large w3-black">
-    <i class="fa fa-home w3-xxlarge"></i>
-    <p>HOME</p>
-  </a>
-  <a href="#about" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
-    <i class="fa fa-user w3-xxlarge"></i>
-    <p>ABOUT</p>
-  </a>
-  <a href="#education" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
-    <i class="fa fa-book w3-xxlarge"></i>
-    <p>EDUCATION</p>
-  </a>
-  <a href="#experience" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
-    <i class="fa fa-cog w3-xxlarge"></i>
-    <p>EXPERIENCE</p>
-  </a>
-  <a href="#contact" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
-    <i class="fa fa-envelope w3-xxlarge"></i>
-    <p>CONTACT</p>
-  </a>
-</nav>
+  <!-- The Grid -->
+  <div class="w3-row-padding">
 
-<!-- Navbar on small screens (Hidden on medium and large screens) -->
-<div class="w3-top w3-hide-large w3-hide-medium" id="myNavbar">
-  <div class="w3-bar w3-black w3-opacity w3-hover-opacity-off w3-center w3-small">
-    <a href="#" class="w3-bar-item w3-button" style="width:25% !important">HOME</a>
-    <a href="#about" class="w3-bar-item w3-button" style="width:25% !important">ABOUT</a>
-    <a href="#education" class="w3-bar-item w3-button" style="width:25% !important">EDUCATION</a>
-    <a href="#experience" class="w3-bar-item w3-button" style="width:25% !important">EXPERIENCE</a>
-    <a href="#contact" class="w3-bar-item w3-button" style="width:25% !important">CONTACT</a>
+    <!-- Left Column -->
+    <div class="w3-third">
+
+      <!--Start personal information section -->
+      <div class="w3-white w3-text-black w3-card-4">
+        <div class="w3-display-container">
+          <img src="llama-2.jpg" style="width:50%" alt="Avatar">
+          <div class="w3-display-bottomleft w3-container w3-text-black">
+          </div>
+        </div>
+        <!--TODO: Change your information-->
+        <h2 style="margin-left: 2%"><strong>Lillian the Llama</strong> </h2>
+        <div class="w3-container">
+          <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text" style="color:darkblue"></i>Ann Arbor, MI</p>
+          <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text" style="color:darkblue" ></i>lillian@umich.edu <!--put your email here--></p>
+          <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text" style="color:darkblue"></i>1224435534 <!--put your phone number here--></p>
+          <hr>
+       <!--End personal information section -->       
+
+      <!-- Start About Me section -->
+          <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text" style="color:darkblue"></i>About me:</b></p>
+          <!-- TODO: Change these paragraphs to be about you -->
+          <p>My name is Lillian, and I am a freshman studying Computer Science at the University of Michigan. </p>
+          <p>I am new to Computer Science, but I am always looking to further my skills in the world of programming and problem-solving. I am taking my first ever programming course called EECS 183 here at the university, and I am looking to apply my newly gained knowledge in a practical sense to further develop as a computer science student, developer, and programmer.</p>
+          <hr>
+      <!-- End About Me section -->
+
+
+      <!-- Start Skills section -->
+          <p class="w3-large w3-text-theme"><b><i class="fa fa-globe fa-fw w3-margin-right w3-text" style="color:darkblue"></i>Skills I am Developing:</b></p>
+          <!-- TODO: change these skills to your skills -->
+          <ul>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>C++</li>
+            <li>Problem Solving</li>
+          </ul>
+      <!-- End Skills section -->
+          
+
+      <!-- Start Awards section -->          
+          <hr>
+          <p class="w3-large w3-text-theme"><b><i class="fa fa-trophy fa-fw w3-margin-right w3-text" style="color:darkblue"></i>Awards:</b></p>          <ul>
+            <li>AP Scholar Award</li>
+            <li>Top 10 Mascots in the U.S.</li>
+            <li>DECA Innovation Plan, 2nd State Leadership Conference</li>
+        </div>
+      </div><br>
+    <!-- End Awards section -->  
+
+    <!-- End Left Column -->
+    </div>
+
+    <!-- Right Column -->
+    <div class="w3-twothird">
+
+  <!-- Start Work Experience section --> 
+      <div class="w3-container w3-card w3-white w3-margin-bottom">
+        <h2 class="w3-text-black w3-padding-16"><i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text" style="color:darkblue"></i>Work Experience</h2>
+        <!--TODO: Edit w3-container divs below to have your job info -->
+        <div class="w3-container">
+          <h5 class="w3-text"><b>Server / Frita Batidos</b></h5>
+          <h6 class="w3-text" style="color:darkblue"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Sep 2020 - <span class="w3-tag w3 w3-round" style="background-color:darkblue">Current</span></h6>
+          <p>Responsibilities:</p>
+          <ul>
+            <li>Provide wait service to ensure customer satisfaction.</li>
+            <li>Answer questions and serve customers.</li>
+            <li>Ensure money count is correct/help manage money in register.</li>
+          </ul>
+          <hr>
+        </div>
+        <div class="w3-container">
+          <h5 class="w3-text"><b>Tutor</b></h5>
+          <h6 class="w3-text" style="color:darkblue"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jan 2017 - Feb 2019</h6>
+          <p>Responsibilities:</p>
+          <ul>
+            <li>Tutored a group of middle school students in mathematics and science.</li>
+            <li>Tutored a group of high school students in physics and calculus.</li>
+            <li>Helped students prepare for PSAT and SAT tests.</li>
+          </ul>
+        </div>
+        <!--To add another job, just create another div section! -->
   </div>
+  <!-- End Work Experience section --> 
+
+   
+   <!-- Start Education section --> 
+      <div class="w3-container w3-card w3-white">
+        <h2 class="w3-text-black w3-padding-16"><i class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text" style="color:darkblue"></i>Education</h2>
+        <div class="w3-container">
+          <!-- TODO: add in your own educational experiences --> 
+          <h5 class="w3-text"><b>University of Michigan</b></h5>
+          <h6 class="w3-text" style="color:darkblue"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2020-2024</h6>
+          <p>Relevant coursework:</p>
+          <ul>
+            <li>EECS 183: Elementary Programming Concepts</li>
+            <li>MATH 115: Calculus 1</li>
+          </ul>
+          <p>Projects:</p>
+          <ul>
+            <li>OHHI AI: An AI that can solve an ohhi game board based on the constraints of the game.</li>
+            <li>BMP Drawer: A program that can take shape arguments from a file and construct a BMP file of those shapes.</li>
+            <li>Elevators: A game where a player can operate elevators in a building and make decisions about how to efficiently manage people's anger levels and wait times.</li>
+          <hr>
+        </div>
+        <div class="w3-container">
+          <h5 class="w3-text"><b>Ann Arbor Huron High School</b></h5>
+          <h6 class="w3-text" style="color:darkblue"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2016 - 2020</h6>
+          <p>Relevant coursework:</p>
+          <ul>
+            <li>AP Physics C: Mechanics</li>
+            <li>Business Management</li>
+          </ul>
+        </div>
+    <!-- End Education section --> 
+    <!-- End Right Column -->
+    </div>
+
+  <!-- End Grid -->
+  </div>
+
+  <!-- End Page Container -->
 </div>
 
-<!-- Page Content -->
-<div class="w3-padding-large" id="main">
-  <!-- Header/Home -->
-  <header class="w3-container w3-padding-32 w3-center w3-white" id="home">
-    <h1 class="w3-jumbo">I'm Lillian.</h1>
-    <p>Student at The University of Michigan.</p>
-    <img src="./llama-1.png" alt="boy" class="w3-image" width="200" height="200">
-  </header>
-
-  <!-- About Section -->
-  <div class="w3-content w3-justify w3-text-grey w3-padding-64" id="about">
-    <h2 class="w3-text-black">About Me</h2>
-    <hr style="width:200px" class="w3-opacity">
-    <!-- EDIT THIS SECTION TO CHANGE YOUR ABOUT ME -->
-    <p> Hello! My name is Lillian. I am a Freshman at The University of Michigan currently pursuing a Computer Science major through the College of Literature, Science, and the Arts. I am very passionate about contributing back to my community and helping teach others about computer science. In addition to computer science I have a large interest in education and art. My hobbies include cooking, long trots in the Arb, and the occassional yoga class. On campus you can often find me heading to class, hanging out with the squirrels in the Diag or exploring around North Campus!
-    <br />
-    This year I have just completed an introductory computer science course offered at UofM. Within this course  I was able to not only learn how to build several projects including a simulated elevator game, I was also given strong foundational skills on how to approach programming problems. The course was taught in C++ and I was able to work with a variety of group members throughout the semester. From this class and my others I have gained the ability to collaborate effectively despite the difficult virtual setting of the class.
-    </p>
-
-  <!-- End About Section -->
-  </div>
-
-  <!-- Education Section -->
-  <div class="w3-padding-64 w3-content w3-text-grey" id="education">
-    <h2 class="w3-text-black">Education</h2>
-    <hr style="width:200px" class="w3-opacity">
-    <!-- EDIT THIS SECTION TO CHANGE YOUR College info -->
-    <h3><b>University of Michigan Ann Arbor</b></h3>
-    College of Literature, Science and the Arts
-    <p><i>Class of 2021</i></p>
-    <ul>
-      <li>Focusing in Computer Science in the College of Literature, Science and the Arts</li>
-      <li>Courses Taken: Elementary Programming Concepts, Introduction to Psychology, </li>
-      <li>Organizations: GEECS, Michigan Squirrel Club</li>
-    </ul>
-    <hr style="width:200px" class="w3-opacity">
-    <!-- EDIT THIS SECTION TO CHANGE YOUR High School Info-->
-    <h3><b>Farmville High School</b></h3>
-    <i>Class of 2017</i>
-    <ul>
-      <li>Involved with a number of student organizations such as Key Club and Best Buddies</li>
-      <li>Member of the Varsity Water Polo team for all four years</li>
-      <li>Completed three Advanced Placement classes in US History, Computer Science, and English Literature</li>
-    </ul>
-  <!-- End Education Section -->
-  </div>
-
-
-  <!-- Experience Section -->
-  <div class="w3-padding-64 w3-content w3-text-grey" id="experience">
-    <h2 class="w3-text-black">Experience</h2>
-    <hr style="width:200px" class="w3-opacity">
-    <!-- EDIT THIS SECTION TO CHANGE One experience section -->
-    <h3><b>Freelance Tutoring</b></h3>
-    <p><i>May 2015 - 2017</i></p>
-    <ul>
-      <li>Offered one on one assistance to students in biology and chemistry</li>
-      <li>Structured learning plans for each student to ensure understanding of material</li>
-      <li>Became well respected amongst peers for dedictation to helping others learn</li>
-    </ul>
-    <hr style="width:200px" class="w3-opacity">
-    <!-- EDIT THIS SECTION TO CHANGE One experience section -->
-    <h3><b>Best Buddies Executive Board</b></h3>
-    <p><i>August 2016 - May 2017</i></p>
-    <ul>
-      <li>Voted to executive board of club by my peers due to high level of involvement</li>
-      <li>During tenure helped to increase number of activities indiviudals could participate in</li>
-      <li>Strengthened bond with many vendors and third-party supporters of Best Buddies</li>
-    </ul>
-
-
-  <!-- End Experiencee Section -->
-  </div>
-
-  <!-- Contact Section -->
-  <div class="w3-padding-64 w3-content w3-text-grey" id="contact">
-    <h2 class="w3-text-grey">Contact Me</h2>
-    <hr style="width:200px" class="w3-opacity">
-    <p>I am always open to chat about new opportunities and my passions.
-      <br />
-      Feel free to reach out to me at any of these links</p>
-      <!-- EDIT THIS SECTION TO CHANGE your contact information -->
-    <div class="w3-section">
-      <p><i class="fa fa-map-marker fa-fw w3-text-white w3-xxlarge w3-margin-right"></i> Ann Arbor, MI</p>
-      <p><i class="fa fa-phone fa-fw w3-text-white w3-xxlarge w3-margin-right"></i> Phone: +1 (234)-567-8900 </p>
-      <p><i class="fa fa-envelope fa-fw w3-text-white w3-xxlarge w3-margin-right"> </i> Email: lillian@umich.edu</p>
-    </div><br>
-
-  <!-- End Contact Section -->
-  </div>
-
-    <!-- Footer -->
-  <footer class="w3-content w3-padding-64 w3-text-grey w3-xlarge">
-
-    <!-- SOCIAL MEDIA ICONS (uncomment if you want them )-->
-    <!--
-      <i class="fa fa-facebook-official w3-hover-opacity"></i>
-      <i class="fa fa-instagram w3-hover-opacity"></i>
-      <i class="fa fa-snapchat w3-hover-opacity"></i>
-      <i class="fa fa-pinterest-p w3-hover-opacity"></i>
-      <i class="fa fa-twitter w3-hover-opacity"></i>
-      <i class="fa fa-linkedin w3-hover-opacity"></i>
-    -->
-
-    <p class="w3-medium">Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank" class="w3-hover-text-green">w3.css</a></p>
-  <!-- End footer -->
-  </footer>
-
-<!-- END PAGE CONTENT -->
-</div>
-
+<!-- Footer -->
+<footer class="w3-container w3 w3-center w3-margin-top" style="background-color:darkblue; color: white">
+  <p>Find me on GitHub or LinkedIn.</p>
+  <!-- TODO: Add in your own socials! You can include more social media by checking out font awesome icons online! -->
+  <i class="fa fa-github w3-hover-opacity" style="font-size:24px; padding-right: 0.5%"><!-- Insert github link --></i>
+  <i class="fa fa-linkedin w3-hover-opacity" style="font-size:24px; padding-bottom:2%"><!-- Insert linkedin link --></i>
+  <!--<p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>-->
+</footer>
+<!-- End Footer -->
 </body>
 </html>
