--- a/index.html
+++ b/index.html
@@ -34,15 +34,17 @@
       <!--Start personal information section -->
       <div class="w3-white w3-text-black w3-card-4">
         <div class="w3-display-container">
-          <img src="IMG_2295" style="width:50%" alt="Avatar">
+          <div style="text-align: center;">
+          <img src="IMG_2295.jpg" style="width:50%" alt="Avatar">
+      <div>
           <div class="w3-display-bottomleft w3-container w3-text-black">
           </div>
         </div>
         <!--TODO: Change your information-->
-        <h2 style="margin-left: 2%"><strong>Lillian the Llama</strong> </h2>
+        <h2 style="margin-left: 2%"><strong>Parth Narang</strong> </h2>
         <div class="w3-container">
           <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text" style="color:darkblue"></i>Ann Arbor, MI</p>
-          <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text" style="color:darkblue" ></i>lillian@umich.edu <!--put your email here--></p>
+          <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text" style="color:darkblue" ></i>narangp@umich.edu <!--put your email here--></p>
           <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text" style="color:darkblue"></i>1224435534 <!--put your phone number here--></p>
           <hr>
        <!--End personal information section -->
